--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.7.4",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
