--- a/app.json
+++ b/app.json
@@ -15,7 +15,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "This helps you login quicker"
+      }
     },
     "android": {
       "adaptiveIcon": {
