--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.15",
+    "expo-local-authentication": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.7.4",
+    "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3",
     "yup": "^1.3.2"
   },
