--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdownalert": "^5.1.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-permissions": "^3.10.1",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3",
